--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   /* Отступы */
-  padding: 0;  
+  padding: 0;
   margin: 0;
 
   /* Разметка */
@@ -18,6 +18,7 @@
 
 @media screen and (max-width: 970px) {
   .profile__description{
+    /* Экран */
     height: 16px;
 
     /* Текст */
