Первое сохранение после ревью.

--- a/blocks/button/__close-button/button__close-button.css
+++ b/blocks/button/__close-button/button__close-button.css
@@ -1,4 +1,4 @@
-.button_pop-up_close-button{
+.button__close-button{
   /* Экран */
   width: 32px;
   height: 32px;
@@ -7,18 +7,18 @@
   right: -40px;
 
   /* Стиль */
-  background-image: url(../../../../images/close-button.svg);
+  background-image: url(../../../images/close-button.svg);
   background-size: cover;
   border: none;
 }
 
 /* Наведение */
-.button_pop-up_close-button:hover{
+.button__close-button:hover{
   opacity: 60%;
 }
 
 @media screen and (max-width: 568px) {
-.button_pop-up_close-button{
+.button__close-button{
   /* Экран */
   width: 20px;
   height: 20px;
