--- a/blocks/button/__add-button/button__add-button.css
+++ b/blocks/button/__add-button/button__add-button.css
@@ -1,10 +1,10 @@
-.button_profile_add-button{
+.button__add-button{
   /* Экран */
   min-width: 150px;
   height: 50px;
 
   /* Стиль */
-  background-image: url(../../../../images/add-button.svg);
+  background-image: url(../../../images/add-button.svg);
   border: 2px solid white;
   background-size: 22px;
 
@@ -14,12 +14,12 @@
 }
 
 /* Наведение */
-.button_profile_add-button:hover{
+.button__add-button:hover{
   opacity: 60%;
 }
 
 @media screen and (max-width: 970px) {
-  .button_profile_add-button{
+  .button__add-button{
     /* Экран */
     width: 100%;
 
