--- a/blocks/button/__save-button/button__save-button.css
+++ b/blocks/button/__save-button/button__save-button.css
@@ -1,4 +1,4 @@
-.button_pop-up_save-button{
+.button__save-button{
   /* Экран */
   width: 100%;
   height: 50px;
@@ -15,15 +15,18 @@
   background-color: black;
   border: none;
   border-radius: 2px;
+
+  padding: 0;
+  margin: 0;
 }
 
 /* Наведение */
-.button_pop-up_save-button:hover{
+.button__save-button:hover{
   opacity: 80%;
 }
 
 @media screen and (max-width: 568px) {
-  .button_pop-up_save-button{
+  .button__save-button{
   /* Текст */
   font-style: normal;
   font-weight: 400;
