--- a/blocks/elements/element/__items/element__items.css
+++ b/blocks/elements/element/__items/element__items.css
@@ -1,15 +1,11 @@
 .element__items{
   /* Экран */
   width: 246px;
-  height: 23px;
-  position: absolute;
-  bottom: 30px;
-  left: 21px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   /* Отступы */
   padding: 0;
-  margin: 0 auto 0 auto;
+  margin: 25px auto auto;
 }
