--- a/blocks/pop-up/__container/pop-up__container.css
+++ b/blocks/pop-up/__container/pop-up__container.css
@@ -1,20 +1,29 @@
 .pop-up__container{
   /* Экран */
+  position: relative;
   width: 358px;
-  height: 259px;
+  min-height: 259px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
+  /* Стиль */
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+
   /* Отступы */
-  padding: 0;
-  margin: auto;
+  padding: 34px 36px 37px 36px;
+  margin: auto 0 auto 0;
 }
 
 @media screen and (max-width: 568px) {
   .pop-up__container{
     /* Экран */
     width: 238px;
-    height: 272px;
+    min-height: 272px;
+
+    /* Отступы */
+    padding: 25px 22px;
   }
 }
