--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,13 +1,14 @@
 .pop-up{
-  visibility: hidden;
+  /* Экран */
   width: 100%;
   height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  transform: translateY(-30.5%) scale(0);
-  transition: .4s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Отступы */
+  margin: 0;
+  padding: 0;
 
   /* Расположение */
   z-index: 2;
