--- a/blocks/button/_type/_add-button/button_type_add-button.css
+++ b/blocks/button/_type/_add-button/button_type_add-button.css
@@ -1,10 +1,10 @@
-.button__add-button{
+.button_type_add-button{
   /* Экран */
   min-width: 150px;
   height: 50px;
 
   /* Стиль */
-  background-image: url(../../../images/add-button.svg);
+  background-image: url(../../../../images/add-button.svg);
   border: 2px solid white;
   background-size: 22px;
 
@@ -14,7 +14,7 @@
 }
 
 /* Наведение */
-.button__add-button:hover{
+.button__type_add-button:hover{
   opacity: 60%;
 }
 
