--- a/blocks/button/_type/_edit-button/button_type_edit-button.css
+++ b/blocks/button/_type/_edit-button/button_type_edit-button.css
@@ -1,10 +1,10 @@
-.button__edit-button{
+.button_type_edit-button{
   /* Экран */
   width: 24px;
   height: 24px;
 
   /* Стиль */
-  background-image: url(../../../images/edit-button.svg);
+  background-image: url(../../../../images/edit-button.svg);
   border: 1px solid white;
   background-size: 10px;
 
@@ -17,12 +17,12 @@
 }
 
 /* Наведение */
-.button__edit-button:hover{
+.button_type_edit-button:hover{
   opacity: 60%;
 }
 
 @media screen and (max-width: 970px) {
-  .button__edit-button{
+  .button_type_edit-button{
     /* Экран */
     width: 18px;
     height: 18px;
