--- a/blocks/button/_type/_like-button/button_type_like-button.css
+++ b/blocks/button/_type/_like-button/button_type_like-button.css
@@ -1,10 +1,10 @@
-.button__like-button{
+.button_type_like-button{
   /* Экран */
   width: 23px;
   height: 20px;
   
   /* Стиль */
-  background-image: url(../../../images/like-button.svg);
+  background-image: url(../../../../images/like-button.svg);
   border: none;
 
   /* Отступы */
@@ -13,6 +13,6 @@
 }
 
 /* Наведение */
-.button__like-button:hover{
+.button_type_like-button:hover{
   opacity: 50%;
 }
