--- a/blocks/button/_type/_save-button/button_type_save-button.css
+++ b/blocks/button/_type/_save-button/button_type_save-button.css
@@ -1,4 +1,4 @@
-.button__save-button{
+.button_type_save-button{
   /* Экран */
   width: 100%;
   height: 50px;
@@ -21,12 +21,12 @@
 }
 
 /* Наведение */
-.button__save-button:hover{
+.button_type_save-button:hover{
   opacity: 80%;
 }
 
 @media screen and (max-width: 568px) {
-  .button__save-button{
+  .button_type_save-button{
   /* Текст */
   font-style: normal;
   font-weight: 400;
