После проверки ревьювера

--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,6 +1,6 @@
-.body{
+.body {
   /* Текст */
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   color: #fff;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
