--- a/blocks/pop-up/__edit/pop-up__edit.css
+++ b/blocks/pop-up/__edit/pop-up__edit.css
@@ -1,18 +1,22 @@
 /* Placeholder: замена цвета */
-::-webkit-input-placeholder { /* WebKit browsers */
-  color:    black;
+::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: black;
 }
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-  color:    black;
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: black;
 }
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-  color:    black;
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: black;
 }
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-  color:    black;
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: black;
 }
 
-.pop-up__edit{
+.pop-up__edit {
   /* Экран */
   height: 27px;
 
