--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -1,21 +1,24 @@
-.pop-up__title{
+.pop-up__title {
   /* Текст */
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: black;
-  
+
   /* Отступы */
   padding: 0;
-  margin: 0;
+  margin: 0 0 54px 0;
 }
 
 @media screen and (max-width: 568px) {
-  .pop-up__title{
+  .pop-up__title {
     /* Текст */
-    font-weight: 900;
     font-size: 18px;
     line-height: 22px;
+
+    /* Отступы */
+    padding: 0;
+    margin: 0 0 75px 0;
   }
 }
