--- a/blocks/pop-up/_overlay/pop-up_overlay.css
+++ b/blocks/pop-up/_overlay/pop-up_overlay.css
@@ -1,4 +1,4 @@
-.pop-up_overlay{
+.pop-up_overlay {
   /* Экран */
   visibility: hidden;
   width: 100%;
@@ -12,5 +12,5 @@
 
   /* Анимация */
   transform: translateY(-30.5%) scale(0);
-  transition: .4s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
