--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -19,9 +19,10 @@
   .profile__info {
     /* Экран */
     max-width: 282px;
+    column-gap: 10px;
+    row-gap: 4px;
 
     /* Отступы */
     margin: 0 0 36px 0;
-    column-gap: 10px;
   }
 }
