--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,10 +1,12 @@
 .element__img {
+  /* Экран */
   width: 100%;
   height: 282px;
   object-fit: cover;
   display: block;
   cursor: pointer;
-
+  
+  /* Отступы */
   padding: 0;
   margin: 0;
   list-style: none;
