--- a/blocks/pop-up/__form/pop-up__form.css
+++ b/blocks/pop-up/__form/pop-up__form.css
@@ -4,15 +4,9 @@
   flex-direction: column;
   width: 100%;
   justify-content: space-between;
+  box-sizing: border-box;
 
   /* Отступы */
   margin: 0;
   padding: 0;
-}
-
-@media screen and (max-width: 568px) {
-  .pop-up__form{
-    /* Экран */
-    min-height: 175px;
-  }
 }
