--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: flex-start;
   border-bottom: 1px solid rgba(84, 84, 84, 70%);
+  box-sizing: border-box;
 
   /* Отступы */
   padding: 0;
