--- a/blocks/pop-up/__container/pop-up__container.css
+++ b/blocks/pop-up/__container/pop-up__container.css
@@ -4,7 +4,6 @@
   width: 358px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
   /* Стиль */
   background-color: white;
@@ -12,7 +11,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 
   /* Отступы */
-  padding: 34px 36px 37px 36px;
+  padding: 34px 36px 37px;
   margin: auto 0 auto 0;
 }
 
