--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -1,10 +1,11 @@
 .pop-up__title {
   /* Текст */
-  font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 100%;
   color: black;
+  box-sizing: border-box;
+  border: none;
 
   /* Отступы */
   padding: 0;
