--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,9 +1,10 @@
 .profile__name {
   /* Текст */
-  font-style: normal;
+  font-style: medium;
   font-weight: 500;
   font-size: 42px;
-  line-height: 114%;
+  line-height: 94%;
+  box-sizing: border-box;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -20,7 +21,7 @@
   .profile__name {
     /* Текст */
     font-size: 27px;
-    line-height: 33px;
-    text-align: center;
+    line-height: 100%;
+    text-align: end;
   }
 }
