--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,10 +1,10 @@
 .profile {
   /* Экран */
-  min-width: 282px;
-  max-width: 880px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* box-sizing: border-box; */
 
   /* Отступы */
   padding: 0;
