--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,10 @@
 .profile__name {
+  max-width: 294px;
   /* Текст */
-  font-style: medium;
+  font-style: normal;
   font-weight: 500;
   font-size: 42px;
-  line-height: 94%;
-  box-sizing: border-box;
+  line-height: 48px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -21,7 +21,7 @@
   .profile__name {
     /* Текст */
     font-size: 27px;
-    line-height: 100%;
-    text-align: end;
+    line-height: 33px;
+    text-align: center;
   }
 }
