Новые изменения в ветке Тестер

--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -5,6 +5,8 @@
   object-fit: cover;
   display: block;
   cursor: pointer;
+  position: relative;
+  z-index: 1;
   
   /* Отступы */
   padding: 0;
