--- a/pages/index.css
+++ b/pages/index.css
@@ -19,15 +19,16 @@
 
 /* BUTTONS */
 @import url(../blocks/button/button.css);
+@import url(../blocks/button/__style/buton__style.css);
 /* profile */
 @import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
 @import url(../blocks/button/_type/_add-button/button_type_add-button.css);
 /* element */
 @import url(../blocks/button/_type/_like-button/button_type_like-button.css);
 @import url(../blocks/button/_type/_liked-button/button_type_liked-button.css);
+@import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);
 /* pop-up */
 @import url(../blocks/button/_type/_close-button/button_type_close-button.css);
-@import url(../blocks/button/_type/_save-button/button_type_save-button.css);
 
 /* PROFILE */
 @import url(../blocks/profile/profile.css);
@@ -56,6 +57,10 @@
 @import url(../blocks/pop-up/__field/pop-up__field.css);
 /* edit */
 @import url(../blocks/pop-up/__edit/pop-up__edit.css);
+/* img */
+@import url(../blocks/pop-up/__img-container/pop-up__img-container.css);
+@import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);
+@import url(../blocks/pop-up/__img/pop-up__img.css);
 /* active */
 @import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);
 
