--- a/pages/index.css
+++ b/pages/index.css
@@ -17,9 +17,9 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
-/* BUTTONS */
+/* КНОПКИ */
 @import url(../blocks/button/button.css);
-@import url(../blocks/button/__style/buton__style.css);
+@import url(../blocks/button/_style/buton_style.css);
 /* profile */
 @import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
 @import url(../blocks/button/_type/_add-button/button_type_add-button.css);
