--- a/pages/index.css
+++ b/pages/index.css
@@ -17,9 +17,9 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
-/* КНОПКИ */
+
+/* общие button*/                                                      /*КНОПКИ*/ 
 @import url(../blocks/button/button.css);
-@import url(../blocks/button/_style/buton_style.css);
 /* profile */
 @import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
 @import url(../blocks/button/_type/_add-button/button_type_add-button.css);
@@ -29,41 +29,50 @@
 @import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);
 /* pop-up */
 @import url(../blocks/button/_type/_close-button/button_type_close-button.css);
+@import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);
+@import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);
 
-/* PROFILE */
-@import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__avatar/profile__avatar.css);
+
+/*содержимое profile*/                                                 /* ПРОФИЛЬ */
+@import url(../blocks/profile/profile.css);                                                               /*профиль-главный*/
+@import url(../blocks/profile/__avatar/profile__avatar.css);                                              /*профиль-аватар*/
 /* profile__info */
-@import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__name/profile__name.css);
-@import url(../blocks/profile/__description/profile__description.css);
+@import url(../blocks/profile/__info/profile__info.css);                                                  /*профиль-инфо (профиль-контейнер)*/
+@import url(../blocks/profile/__name/profile__name.css);                                                  /*профиль-имя (в профиль-контейнере)*/
+@import url(../blocks/profile/__description/profile__description.css);                                    /*профиль-описание (в профиль-контейнере)*/
 
-/* ELEMENTS */
-@import url(../blocks/elements/elements.css);
+
+/*elements*/                                                           /* ЭЛЕМЕНТЫ */
+@import url(../blocks/elements/elements.css);                                                             /*элементы-главное (карточки)*/
 /* element */
-@import url(../blocks/element/element.css);
-@import url(../blocks/element/__items/element__items.css);
-@import url(../blocks/element/__title/element__title.css);
-@import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/element.css);                                                               /*элемент-главный (карточка-контейнер)*/
+@import url(../blocks/element/__items/element__items.css);                                                /*элемент-главный (в карточка-контейнер)*/
+@import url(../blocks/element/__title/element__title.css);                                                /*элемент-заголовок (в карточка-контейнер)*/
+@import url(../blocks/element/__img/element__img.css);                                                    /*элемент-изображение (в карточка-контейнер)*/
 
-/* POP-UP */
-@import url(../blocks/pop-up/pop-up.css);
-@import url(../blocks/pop-up/_type/_overlay/pop-up_type_overlay.css);
+
+/*общее pop-up*/                                                       /* ПОП-АП */
+@import url(../blocks/pop-up/pop-up.css);                                                                 /*попап-главный*/
+@import url(../blocks/pop-up/_type/_overlay/pop-up_type_overlay.css);                                     /*оверлей*/
+@import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);                                       /*попап включился*/
 /* container */
-@import url(../blocks/pop-up/__container/pop-up__container.css);
-@import url(../blocks/pop-up/__title/pop-up__title.css);
-/* field */
-@import url(../blocks/pop-up/__form/pop-up__form.css);
-@import url(../blocks/pop-up/__field/pop-up__field.css);
-/* edit */
-@import url(../blocks/pop-up/__edit/pop-up__edit.css);
+@import url(../blocks/pop-up/__container/pop-up__container.css);                                          /*попап-контейнер*/
+@import url(../blocks/pop-up/__title/pop-up__title.css);                                                  /*попап-заголовок*/
+/* form */
+@import url(../blocks/pop-up/__form/pop-up__form.css);                                                    /*попап-форма*/
+@import url(../blocks/pop-up/__fieldset/pop-up__fieldset.css);                                            /*попап-филдсет*/
+/* input */
+@import url(../blocks/pop-up/__input/pop-up__input.css);                                                  /*попап-инпуты*/
+@import url(../blocks/pop-up/__input-container/pop-up__input-container.css);                              /*то, что объединяет инпуты со спанами*/
+@import url(../blocks/pop-up/__input/_type/_error-border/pop-up__input_type_error-border.css);            /*красная полоска в инпуте, обозначающая ошибку (бордер)*/
+@import url(../blocks/pop-up/__input-errormessage/pop-up__input-errormessage.css);                        /*красный текст под инпутом, обозначающий ошибку - выключенный (спан)*/
+@import url(../blocks/pop-up/__input-errormessage/_active/pop-up__input-errormessage_active.css);         /*красный текст под инпутом, обозначающий ошибку - включенный (спан)*/
 /* img */
-@import url(../blocks/pop-up/__img-container/pop-up__img-container.css);
-@import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);
-@import url(../blocks/pop-up/__img/pop-up__img.css);
-/* active */
-@import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);
+@import url(../blocks/pop-up/__img-container/pop-up__img-container.css);                                  /*попап-контейнер для большого изображения*/
+@import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);                                      /*подпись под большим изображением*/
+@import url(../blocks/pop-up/__img/pop-up__img.css);                                                      /*большое изображение*/
 
-/* FOOTER */
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/*footer*/                                                             /* ФУТЕР */
+@import url(../blocks/footer/footer.css);                                                                 /*футер-главный*/
+@import url(../blocks/footer/__copyright/footer__copyright.css);                                          /*футер-копирайт*/
