--- a/blocks/pop-up/__input-errormessage/pop-up__input-errormessage.css
+++ b/blocks/pop-up/__input-errormessage/pop-up__input-errormessage.css
@@ -2,8 +2,11 @@
   /* Экран */
   visibility: hidden;
   opacity: 1;
+  display: block;
+  min-height: 25px;
 
   /* Текст */
+  /* position: absolute; */
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -11,6 +14,6 @@
   color: #FF0000;
 
   /* Отступы */
-  margin: 0;
+  margin: 5px 0 0;
   padding: 0;
 }
