--- a/pages/index.css
+++ b/pages/index.css
@@ -11,25 +11,25 @@
 @import url(../blocks/body/body.css);
 
 /* CONTENT */
-@import url(../blocks/content/content.css);
+@import url(../blocks/content/content.css);                                                               /*мэин-контент*/
 
 /* HEADER */
-@import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/header.css);                                                                 /*хэдэр*/
+@import url(../blocks/header/__logo/header__logo.css);                                                    /*лого*/
 
 /* общие button*/                                                      /*КНОПКИ*/ 
-@import url(../blocks/button/button.css);
+@import url(../blocks/button/button.css);                                                                 /*общий стиль кнопок*/
 /* profile */
-@import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
-@import url(../blocks/button/_type/_add-button/button_type_add-button.css);
+@import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);                             /*кнопка для открытия поп-апа редактирования*/
+@import url(../blocks/button/_type/_add-button/button_type_add-button.css);                               /*кнопка для открытия поп-апа добавления*/
 /* element */
-@import url(../blocks/button/_type/_like-button/button_type_like-button.css);
-@import url(../blocks/button/_type/_liked-button/button_type_liked-button.css);
-@import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);
+@import url(../blocks/button/_type/_like-button/button_type_like-button.css);                             /*непролайкнутая кнопка поп-апа*/ 
+@import url(../blocks/button/_type/_liked-button/button_type_liked-button.css);                           /*пролайкнутая кнопка поп-апа*/
+@import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);                         /*удаляющая кнопка поп-апа*/
 /* pop-up */
-@import url(../blocks/button/_type/_close-button/button_type_close-button.css);
-@import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);
-@import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);
+@import url(../blocks/button/_type/_close-button/button_type_close-button.css);                           /*закрывающая кнопка поп-апа*/
+@import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);                          /*валидная кнопка поп-апа*/
+@import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);                      /*невалидная кнопка поп-апа*/
 
 /*содержимое profile*/                                                 /* ПРОФИЛЬ */
 @import url(../blocks/profile/profile.css);                                                               /*профиль-главный*/
