--- a/pages/index.css
+++ b/pages/index.css
@@ -11,62 +11,62 @@
 @import url(../blocks/body/body.css);
 
 /* CONTENT */
-@import url(../blocks/content/content.css);                                                               /*мэин-контент*/
+@import url(../blocks/content/content.css);
 
 /* HEADER */
-@import url(../blocks/header/header.css);                                                                 /*хэдэр*/
-@import url(../blocks/header/__logo/header__logo.css);                                                    /*лого*/
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
 /* общие button*/                                                      /*КНОПКИ*/ 
-@import url(../blocks/button/button.css);                                                                 /*общий стиль кнопок*/
+@import url(../blocks/button/button.css);
 /* profile */
-@import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);                             /*кнопка для открытия поп-апа редактирования*/
-@import url(../blocks/button/_type/_add-button/button_type_add-button.css);                               /*кнопка для открытия поп-апа добавления*/
+@import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
+@import url(../blocks/button/_type/_add-button/button_type_add-button.css);
 /* element */
-@import url(../blocks/button/_type/_like-button/button_type_like-button.css);                             /*непролайкнутая кнопка поп-апа*/
-@import url(../blocks/button/_type/_liked-button/button_type_liked-button.css);                           /*пролайкнутая кнопка поп-апа*/
-@import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);                         /*удаляющая кнопка поп-апа*/
+@import url(../blocks/button/_type/_like-button/button_type_like-button.css);
+@import url(../blocks/button/_type/_liked-button/button_type_liked-button.css);
+@import url(../blocks/button/_type/_delete-button/button_type_delete-button.css);
 /* pop-up */
-@import url(../blocks/button/_type/_close-button/button_type_close-button.css);                           /*закрывающая кнопка поп-апа*/
-@import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);                          /*валидная кнопка поп-апа*/
-@import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);                      /*невалидная кнопка поп-апа*/
+@import url(../blocks/button/_type/_close-button/button_type_close-button.css);
+@import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);
+@import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);
 
 /*содержимое profile*/                                                 /* ПРОФИЛЬ */
-@import url(../blocks/profile/profile.css);                                                               /*профиль-главный*/
-@import url(../blocks/profile/__avatar/profile__avatar.css);                                              /*профиль-аватар*/
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 /* profile__info */
-@import url(../blocks/profile/__info/profile__info.css);                                                  /*профиль-инфо (профиль-контейнер)*/
-@import url(../blocks/profile/__name/profile__name.css);                                                  /*профиль-имя (в профиль-контейнере)*/
-@import url(../blocks/profile/__description/profile__description.css);                                    /*профиль-описание (в профиль-контейнере)*/
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__description/profile__description.css);
 
 /*elements*/                                                           /* ЭЛЕМЕНТЫ */
-@import url(../blocks/elements/elements.css);                                                             /*элементы-главное (карточки)*/
+@import url(../blocks/elements/elements.css);
 /* element */
-@import url(../blocks/element/element.css);                                                               /*элемент-главный (карточка-контейнер)*/
-@import url(../blocks/element/__items/element__items.css);                                                /*элемент-главный (в карточка-контейнер)*/
-@import url(../blocks/element/__title/element__title.css);                                                /*элемент-заголовок (в карточка-контейнер)*/
-@import url(../blocks/element/__img/element__img.css);                                                    /*элемент-изображение (в карточка-контейнер)*/
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__items/element__items.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__img/element__img.css);
 
 /*общее pop-up*/                                                       /* ПОП-АП */
-@import url(../blocks/pop-up/pop-up.css);                                                                 /*попап-главный*/
-@import url(../blocks/pop-up/_type/_overlay/pop-up_type_overlay.css);                                     /*оверлей*/
-@import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);                                       /*попап включился*/
+@import url(../blocks/pop-up/pop-up.css);
+@import url(../blocks/pop-up/_type/_overlay/pop-up_type_overlay.css);
+@import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);
 /* container */
-@import url(../blocks/pop-up/__container/pop-up__container.css);                                          /*попап-контейнер*/
-@import url(../blocks/pop-up/__title/pop-up__title.css);                                                  /*попап-заголовок*/
+@import url(../blocks/pop-up/__container/pop-up__container.css);
+@import url(../blocks/pop-up/__title/pop-up__title.css);
 /* form */
-@import url(../blocks/pop-up/__form/pop-up__form.css);                                                    /*попап-форма*/
-@import url(../blocks/pop-up/__fieldset/pop-up__fieldset.css);                                            /*попап-филдсет*/
+@import url(../blocks/pop-up/__form/pop-up__form.css);
+@import url(../blocks/pop-up/__fieldset/pop-up__fieldset.css);
 /* input */
-@import url(../blocks/pop-up/__input/pop-up__input.css);                                                  /*попап-инпуты*/
-@import url(../blocks/pop-up/__input/_type/_error-border/pop-up__input_type_error-border.css);            /*красная полоска в инпуте, обозначающая ошибку (бордер)*/
-@import url(../blocks/pop-up/__input-errormessage/pop-up__input-errormessage.css);                        /*красный текст под инпутом, обозначающий ошибку - выключенный (спан)*/
-@import url(../blocks/pop-up/__input-errormessage/_active/pop-up__input-errormessage_active.css);         /*красный текст под инпутом, обозначающий ошибку - включенный (спан)*/
+@import url(../blocks/pop-up/__input/pop-up__input.css);
+@import url(../blocks/pop-up/__input/_type/_error-border/pop-up__input_type_error-border.css);
+@import url(../blocks/pop-up/__input-errormessage/pop-up__input-errormessage.css);
+@import url(../blocks/pop-up/__input-errormessage/_active/pop-up__input-errormessage_active.css);
 /* img */
-@import url(../blocks/pop-up/__img-container/pop-up__img-container.css);                                  /*попап-контейнер для большого изображения*/
-@import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);                                      /*подпись под большим изображением*/
-@import url(../blocks/pop-up/__img/pop-up__img.css);                                                      /*большое изображение*/
+@import url(../blocks/pop-up/__img-container/pop-up__img-container.css);
+@import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);
+@import url(../blocks/pop-up/__img/pop-up__img.css);
 
 /*footer*/                                                             /* ФУТЕР */
-@import url(../blocks/footer/footer.css);                                                                 /*футер-главный*/
-@import url(../blocks/footer/__copyright/footer__copyright.css);                                          /*футер-копирайт*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
