--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,8 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
-/* общие button*/                                                      /*КНОПКИ*/ 
+/*КНОПКИ*/
+/* общие button*/
 @import url(../blocks/button/button.css);
 /* profile */
 @import url(../blocks/button/_type/_edit-button/button_type_edit-button.css);
@@ -31,7 +32,8 @@
 @import url(../blocks/button/_popup-style/_valid/button__popup-style_valid.css);
 @import url(../blocks/button/_popup-style/_invalid/button__popup-style_invalid.css);
 
-/*содержимое profile*/                                                 /* ПРОФИЛЬ */
+/* ПРОФИЛЬ */
+/*содержимое profile*/
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 /* profile__info */
@@ -39,7 +41,8 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__description/profile__description.css);
 
-/*elements*/                                                           /* ЭЛЕМЕНТЫ */
+/* ЭЛЕМЕНТЫ */
+/*elements*/
 @import url(../blocks/elements/elements.css);
 /* element */
 @import url(../blocks/element/element.css);
@@ -47,7 +50,8 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__img/element__img.css);
 
-/*общее pop-up*/                                                       /* ПОП-АП */
+/* ПОП-АП */
+/*общее pop-up*/
 @import url(../blocks/pop-up/pop-up.css);
 @import url(../blocks/pop-up/_type/_overlay/pop-up_type_overlay.css);
 @import url(../blocks/pop-up/_type/_active/pop-up_type_active.css);
@@ -67,6 +71,7 @@
 @import url(../blocks/pop-up/__img-caption/pop-up__img-caption.css);
 @import url(../blocks/pop-up/__img/pop-up__img.css);
 
-/*footer*/                                                             /* ФУТЕР */
+/* ФУТЕР */
+/*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
