--- a/blocks/button/_type/_add-button/button_type_add-button.css
+++ b/blocks/button/_type/_add-button/button_type_add-button.css
@@ -22,3 +22,10 @@
     background-size: 16px;
   }
 }
+
+@media screen and (max-width: 840px) {
+  .button_type_add-button {
+    /* Экран */
+    width: 282px;
+  }
+}
