--- a/src/style/index.css
+++ b/src/style/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__description/profile__description.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 
 /* ЭЛЕМЕНТЫ */
 /*elements*/
@@ -49,6 +50,8 @@
 @import url(../blocks/element/__items/element__items.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/__counterLikes/element__counterLikes.css);
+@import url(../blocks/element/__container/element__container.css);
 
 /* ПОП-АП */
 /*общее pop-up*/
